<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- [CHAR LIMIT=20] -->
    <string name="app_name">Just Java</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="quantity">quantity</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="order_summary">order summary</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="toppings">toppings</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="cream">Whipped cream</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="good_job">Good job !!!</string>
    <!-- [CHAR LIMIT=20] -->
    <string name="mail_subject">Just Java Order</string>

    <!-- [CHAR LIMIT=20] -->
    <string name="order">order</string>

    <!-- [CHAR LIMIT=20] -->
    <string name="thanks">Thank you!</string>


    <!-- [CHAR LIMIT=20] -->
    <string name="complete_name">Name: <xliff:g id="lastName" example="Amy">%s</xliff:g></string>
    <!--
  Whipped cream topping for the order summary. It will be shown in the format of
  "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
-->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java order for  <xliff:g id="name" example="Amy">%s</xliff:g></string>

</resources>
